# spanish-worksheets

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  render.yaml  start.sh
.github/workflows/: generate-worksheet.yml  manual-deploy.yml
config/: settings.py  urls.py  views.py
recipients/: admin.py  models.py
recipients/migrations/: 0001_initial.py
users/: admin.py  models.py  tests.py  views.py
users/management/commands/: create_superuser_prod.py
users/migrations/: 0001_initial.py  0002_user_date_joined_user_groups_user_is_staff_and_more.py
worksheet/: admin.py  apps.py  example.json  jobs.py  models.py  serializers.py  urls.py  views.py
worksheet/management/commands/: rq_status.py  run_worksheet.py  send_test_email.py
worksheet/migrations/: 0001_initial.py  0002_config.py  0003_worksheet_content.py  0004_worksheet_themes.py
worksheet/services/: email.py  exercise_items.py  generate.py  grammar_pools.py  grammar_rotator.py  prompts.py  topic_rotator.py
worksheet/tests/: test_email.py  test_exercise_items.py  test_generate.py  test_grammar_rotator.py  test_prompts.py  test_worksheet_api.py
